--- a/index.html
+++ b/index.html
@@ -45,5 +45,8 @@
             <p>Creation of <span>Jules Wyvern</span></p>
       </div>
     </div>
+    <div class="footer">
+      <p>Challange by <a href="https://frontendmentor.io">Frontend Mentor</a>. Coded by <a href="https://instagram.com/munsif_ali_taj">Munsif Ali</a></p>
+    </div>
   </body>
 </html>
